nativewind prisma project

--- a/app.json
+++ b/app.json
@@ -19,13 +19,15 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.anonymous.nativewind_prisma"
     },
     "web": {
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+      "@prisma/react-native",
       "expo-router",
       [
         "expo-splash-screen",
