--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
-    "@prisma/client": "6.16.3",
-    "@prisma/react-native": "6.0.1",
+    "@prisma/client": "^6.19.1",
+    "@prisma/react-native": "^6.0.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -32,6 +32,7 @@
     "expo-web-browser": "~15.0.7",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "prisma": "^6.19.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
